Completed unit tests for Movies.java